--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend express server for odin capstone social media project",
   "main": "index.js",
   "engines": {
-    "node": "20.x"
+    "node": "23.6.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
