Launching app via dockerfile to ensure node 20 is used

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend express server for odin capstone social media project",
   "main": "index.js",
   "engines": {
-    "node": "23.6.1"
+    "node": "23.6.1",
+    "npm": "10.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
